src/test/ui/consts/issue-28113.rs
#![allow(warnings)]

const X: u8 =
    || -> u8 { 5 }()
    //~^ ERROR calls in constants are limited to constant functions
;

fn main() {}
